# CodeAgent-RL

./: .gitignore  pyproject.toml
src/: helpers.py  modal_app.py  orchestrator.py
src/checkpointing/: __init__.py  recovery.py  weight_sync.py
src/config/: __init__.py  config.py  deepspeed_config.py
src/data/: __init__.py  datasets.py  prompt_queue.py  sequence_packing.py
src/environments/: __init__.py  base.py  codecontests_env.py  pool.py  swe_env.py  tools.py
src/inference/: __init__.py  rollout.py  vllm_server.py
src/training/: __init__.py  evaluator.py  launcher.py  loss.py  model_loader.py  rewards.py  rollout_buffer.py  trainer.py  trainer_subprocess.py  wandb_logger.py
