[project]
name = "CodeAgent-RL"
version = "0.1.0"
description = "Replication of the RL pipeline described in the Composer 2 report for tool-using code agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "deepspeed>=0.18.0",
    "vllm>=0.12.0",
    "modal>=1.4.2",
    "huggingface-hub>=0.30.0",
    "datasets>=3.5.0",
    "wandb>=0.18.0",
    "python-dotenv>=1.2.2",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.57.0",
    "pyyaml>=6.0",
    "docker>=7.1.0",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
